--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Apache image processing library -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
 
     </dependencies>
 
